--- a/index.html
+++ b/index.html
@@ -59,5 +59,78 @@
             </div>
         </div>
     </nav>
+    <main class="flex flex-col md:flex-row mx-auto container max-w-6xl">
+        <div class="space-y-4 w-full max-w-[10rem]">
+            <h2 class="text-2xl">Filters</h2>
+            <h3 class="text-xl">Category</h3>
+            <div>
+                <input type="checkbox" class="check" id="cameras">
+                <label for="cameras">Cameras</label>
+            </div>
+            <div>
+                <input type="checkbox" class="check" id="smartphones">
+                <label for="smartphones">Smartphones</label>
+            </div>
+            <div>
+                <input type="checkbox" class="check" id="games">
+                <label for="games">Games</label>
+            </div>
+            <div>
+                <input type="checkbox" class="check" id="televisions">
+                <label for="televisions">Televisions</label>
+            </div>
+        </div>
+            <div id="products-wrapper" class="w-full max-w-4xl mx-auto grid grid-cols-2 sm:grid-cols-3 xl:grid-cols-4 gap-6 place-content-center p-4">
+                <div class="item space-y-2">
+                    <div class="bg-gray-100 flex justify-center relative overflow-hidden group cursor-pointer border rounded-xl">
+                        <img src="images/cannon_eos_camera.png" alt=""
+                        class="w-full h-full object-cover"
+                        >
+                        <button class="status bg-black text-white absolute bottom-0 left-0 right-0 text-center py-2 translate-y-full transition group-hover:translate-y-0">
+                            Add to cart
+                        </button>
+                    </div>
+                    <p class="text-xl">Cannon Camera</p>
+                    <strong>$399</strong>
+                </div>
+                <div class="item space-y-2">
+                    <div class="bg-gray-100 flex justify-center relative overflow-hidden group cursor-pointer border rounded-xl">
+                        <img src="images/google_pixel.png" alt=""
+                        class="w-full h-full object-cover"
+                        >
+                        <button class="status bg-black text-white absolute bottom-0 left-0 right-0 text-center py-2 translate-y-full transition group-hover:translate-y-0">
+                            Add to cart
+                        </button>
+                    </div>
+                    <p class="text-xl">Google Pixel</p>
+                    <strong>$399</strong>
+                </div>
+                <div class="item space-y-2">
+                    <div class="bg-gray-100 flex justify-center relative overflow-hidden group cursor-pointer border rounded-xl">
+                        <img src="images/iphone_14.png" alt=""
+                        class="w-full h-full object-cover"
+                        >
+                        <button class="status bg-black text-white absolute bottom-0 left-0 right-0 text-center py-2 translate-y-full transition group-hover:translate-y-0">
+                            Add to cart
+                        </button>
+                    </div>
+                    <p class="text-xl">iphone 14</p>
+                    <strong>$399</strong>
+                </div>
+                <div class="item space-y-2">
+                    <div class="bg-gray-100 flex justify-center relative overflow-hidden group cursor-pointer border rounded-xl">
+                        <img src="images/lg_tv.png" alt=""
+                        class="w-full h-full object-cover"
+                        >
+                        <button class="status bg-black text-white absolute bottom-0 left-0 right-0 text-center py-2 translate-y-full transition group-hover:translate-y-0">
+                            Add to cart
+                        </button>
+                    </div>
+                    <p class="text-xl">LG TV</p>
+                    <strong>$399</strong>
+                </div>
+            </div>
+            
+    </main>
 </body>
 </html>
