--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="bg-gray-900 p-4 mb-6">
         <div class="container max-w-6xl mx-auto flex flex-col sm:flex-row gap-8 item-center">
             <div class="relative w-full">
-                <input type="text" class="bg-gray-700 rounded-full p-2 pl-10 focus:w-full"
+                <input type="text" id="search" class="bg-gray-700 rounded-full p-2 pl-10 focus:w-full"
                 placeholder="Search Product"
                 >
                 <svg
@@ -51,7 +51,7 @@
                 <path d="M9 11v-5a3 3 0 0 1 6 0v5" />
               </svg>
               <small
-                id="cart-count"
+                id="count"
                 class="bg-red-500 text-xs text-white w-4 h-4 absolute -top-2 -right-2 rounded-full"
                 >0</small
               >
@@ -63,6 +63,7 @@
         <div class="space-y-4 w-full max-w-[10rem]">
             <h2 class="text-2xl">Filters</h2>
             <h3 class="text-xl">Category</h3>
+            <div id="filters-container" class="text-xl space-y-2">
             <div>
                 <input type="checkbox" class="check" id="cameras">
                 <label for="cameras">Cameras</label>
@@ -80,57 +81,11 @@
                 <label for="televisions">Televisions</label>
             </div>
         </div>
+        </div>
             <div id="products-wrapper" class="w-full max-w-4xl mx-auto grid grid-cols-2 sm:grid-cols-3 xl:grid-cols-4 gap-6 place-content-center p-4">
-                <div class="item space-y-2">
-                    <div class="bg-gray-100 flex justify-center relative overflow-hidden group cursor-pointer border rounded-xl">
-                        <img src="images/cannon_eos_camera.png" alt=""
-                        class="w-full h-full object-cover"
-                        >
-                        <button class="status bg-black text-white absolute bottom-0 left-0 right-0 text-center py-2 translate-y-full transition group-hover:translate-y-0">
-                            Add to cart
-                        </button>
-                    </div>
-                    <p class="text-xl">Cannon Camera</p>
-                    <strong>$399</strong>
-                </div>
-                <div class="item space-y-2">
-                    <div class="bg-gray-100 flex justify-center relative overflow-hidden group cursor-pointer border rounded-xl">
-                        <img src="images/google_pixel.png" alt=""
-                        class="w-full h-full object-cover"
-                        >
-                        <button class="status bg-black text-white absolute bottom-0 left-0 right-0 text-center py-2 translate-y-full transition group-hover:translate-y-0">
-                            Add to cart
-                        </button>
-                    </div>
-                    <p class="text-xl">Google Pixel</p>
-                    <strong>$399</strong>
-                </div>
-                <div class="item space-y-2">
-                    <div class="bg-gray-100 flex justify-center relative overflow-hidden group cursor-pointer border rounded-xl">
-                        <img src="images/iphone_14.png" alt=""
-                        class="w-full h-full object-cover"
-                        >
-                        <button class="status bg-black text-white absolute bottom-0 left-0 right-0 text-center py-2 translate-y-full transition group-hover:translate-y-0">
-                            Add to cart
-                        </button>
-                    </div>
-                    <p class="text-xl">iphone 14</p>
-                    <strong>$399</strong>
-                </div>
-                <div class="item space-y-2">
-                    <div class="bg-gray-100 flex justify-center relative overflow-hidden group cursor-pointer border rounded-xl">
-                        <img src="images/lg_tv.png" alt=""
-                        class="w-full h-full object-cover"
-                        >
-                        <button class="status bg-black text-white absolute bottom-0 left-0 right-0 text-center py-2 translate-y-full transition group-hover:translate-y-0">
-                            Add to cart
-                        </button>
-                    </div>
-                    <p class="text-xl">LG TV</p>
-                    <strong>$399</strong>
-                </div>
             </div>
             
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
